# pycat

./: .gitignore  .travis.yml  README.md  setup.cfg  setup.py
TestCases/: test_numpy.py  test_sudoku.py
book_pydata/: Chapter1.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb  Chapter6.ipynb  Chapter7.ipynb  Chapter8.ipynb  README.md
book_pydata/.ipynb_checkpoints/: Chapter2-checkpoint.ipynb
pycat/: __init__.py  pycat.py
tests/: __init__.py  pycat.py
