[metadata]
name = pycat
version = 0.0.2
description = pycat
author = WooKyoung Noh
author_email = wookay.noh@gmail.com
url = https://github.com/wookay/pycat

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
tests_require =
    unittest2

[options.packages.find]
exclude =
    tests
